NAID-3325: Values incorrect when mapping to codeable concepts for condition
* Update unit test to reflect the correct population of `code.coding[].system` and `code.coding[].code`
* Update integration test expected result JSON for `primary emergency` to ensure to test the correct population of the above.
* Update test harness expected result JSON for `primary emergency` to ensure to test the correct population of the above.
* Update `CodeUtil` to ensure that the values for `code.coding[].system` and `code.coding[].code` are now populated correctly.